hphp/test/slow/reified_generics/invalid-hint-1.php.expectf
Fatal error: "is" and "as" operators cannot be used with a function in %s on line 4
